// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`articleSelectors getArticle (en locale) 1`] = `
Object {
  "articleType": "topic-article",
  "content": "<section><p>Tim Berners Lees the World Wide Web is...</p></section>",
  "copyright": Object {
    "creators": Array [
      Object {
        "name": "Ragna Marie Tørdal",
        "type": "writer",
      },
    ],
    "license": Object {
      "description": "Creative Commons Attribution-ShareAlike 2.0 Generic",
      "license": "by-sa",
      "url": "https://creativecommons.org/licenses/by-sa/2.0/",
    },
    "origin": "",
  },
  "created": "2016-11-26T11:07:25Z",
  "footnotes": undefined,
  "id": "4",
  "introduction": "Brainstorming is an important",
  "language": "en",
  "metaDescription": "Brainstorming",
  "oldNdlaUrl": "//ndla.no/node/172732",
  "requiredLibraries": Array [],
  "revision": 1,
  "tags": Array [
    "storytelling",
    "idea development",
    "media design",
    "instruments",
  ],
  "title": "Brainstorming",
  "updated": "2016-12-01T13:05:02Z",
  "updatedBy": "content-import-client",
  "visualElement": "<embed/>",
}
`;

exports[`articleSelectors getArticle (nb locale) 1`] = `
Object {
  "articleType": "topic-article",
  "content": "<section><p>Trykkpressen til Gutenberg og Tim Berners Lees the World Wide Web er begge...</p></section>",
  "copyright": Object {
    "creators": Array [
      Object {
        "name": "Ragna Marie Tørdal",
        "type": "writer",
      },
    ],
    "license": Object {
      "description": "Creative Commons Attribution-ShareAlike 2.0 Generic",
      "license": "by-sa",
      "url": "https://creativecommons.org/licenses/by-sa/2.0/",
    },
    "origin": "",
  },
  "created": "2016-11-26T11:07:25Z",
  "footnotes": undefined,
  "id": "1",
  "introduction": "Idéutvikling er en viktig del av",
  "language": "nb",
  "metaDescription": "Presentasjon av emne om idéutvikling",
  "oldNdlaUrl": "//ndla.no/node/172732",
  "requiredLibraries": Array [],
  "revision": 1,
  "tags": Array [
    "fortelleteknikk",
    "idéutvikling",
    "mediedesign",
    "virkemidler",
  ],
  "title": "Idéskaping og mediedesign",
  "updated": "2016-12-01T13:05:02Z",
  "updatedBy": "content-import-client",
  "visualElement": "<embed/>",
}
`;
